5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1649_2711.log
== TEST (2019-04-15 20:03:20) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
val= (qtdru * valtic) + (qtdbus * valbus)  
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:04:15) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
val1= (qtdru * valtic) + (qtdbus * valbus)
print(val1)
-- OUTPUT:
63.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:01) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
val1= (qtdru * valtic) + (qtdbus * valbus)
if val > val1
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > val1
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:22) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:23) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:23) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:24) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:24) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:24) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:24) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:25) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:25) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:25) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:25) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:25) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor
     print("suficiente")
-- ERROR:
File "XXXX", line 7
    if val > valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:30) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("suficiente")
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:06:58) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("suficiente")
else:
	  print("insuficiente")
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:07:15) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("suficiente")
else:
	  print("insuficiente")
-- EXECUTION TIME:
0.139498
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:07:24) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("suficiente")
else:
	  print("insuficiente")
-- EXECUTION TIME:
0.150044
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
suficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:07:24) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("suficiente")
else:
	  print("insuficiente")
-- EXECUTION TIME:
0.114152
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:07:25) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("suficiente")
else:
	  print("insuficiente")
-- EXECUTION TIME:
0.118229
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
suficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:07:25) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("suficiente")
else:
	  print("insuficiente")
-- EXECUTION TIME:
0.0962112
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/2711/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:07:25) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("suficiente")
else:
	  print("insuficiente")
-- EXECUTION TIME:
0.111799
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:07:25) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("suficiente")
else:
	  print("insuficiente")
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:08:03) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("SUFICIENTE")
else:
	  print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:08:05) 
-- CODE:
val=float(input("valor disponivel:"))
qtdru=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor dos passes:"))
valor= (qtdru * valtic) + (qtdbus * valbus)
if val > valor:
     print("SUFICIENTE")
else:
	  print("INSUFICIENTE")
-- EXECUTION TIME:
0.137839
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
